--- a/Modules/UserManager/Views/_ViewStart.cshtml
+++ b/Modules/UserManager/Views/_ViewStart.cshtml
@@ -1,5 +1,7 @@
+@using Upendo.Modules.UserManager.Utility
+
 @{
-  Layout = "~/DesktopModules/MVC/Upendo.Modules.UserManager/Views/Shared/_Layout.cshtml";
+  Layout = "~/" + Constants.ModulePath + "Views/Shared/_Layout.cshtml";
 }
 @*
 
