--- a/Modules/UserManager/Views/UserManage/ChangePassword.cshtml
+++ b/Modules/UserManager/Views/UserManage/ChangePassword.cshtml
@@ -1,57 +1,58 @@
 @inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<Upendo.Modules.UserManager.ViewModels.UserViewModel>
 
-@using System.Collections.Generic
 @using DotNetNuke.Web.Mvc.Helpers
-@using DotNetNuke.Services.Localization;
+
+@using Lang = Upendo.Modules.UserManager.Utility.Helpers.LocalizationHelper
+
 @{
-    string ResourceFile = "~/DesktopModules/MVC/Upendo.Modules.UserManager/App_LocalResources/AddEdit.resx";
+  string ResourceName = "AddEdit";
 }
 
 <div id="Item-@Dnn.ModuleContext.ModuleId">
-    <div class="dnnForm dnnEditBasicSettings" id="dnnEditBasicSettings">
-        <div class="dnnFormExpandContent dnnRight "><a href="#">@Dnn.LocalizeString("ExpandAll")</a></div>
-        <h2 id="dnnSitePanel-BasicSettings" class="dnnFormSectionHead dnnClear">
-            <a href="#" class="dnnSectionExpanded">@Dnn.LocalizeString("BasicSettings")</a>
-        </h2>
-        <fieldset>
-            <div class="formItem col-6">
-                <div><label>@Localization.GetString("Password", @ResourceFile)</label></div>
-                @Html.TextBoxFor(m => m.Password, new
-                {
-                    @class = "form-control",
-                    @id = "password",
-                    @type = "password",
-                onkeyup = "handlePasswordValidation();"
-                })
-                <span id="passwordValidationMessage"></span>
-            </div>
-            <div class="formItem col-6">
-                <div><label>@Localization.GetString("ConfirmPassword", @ResourceFile)</label></div>
-                @Html.TextBoxFor(m => m.ConfirmPassword, new
-                {
-                    @id = "confirm_password",
-                    @type = "password",
-                    onkeyup = "validatePassword();"
-                })
-                <span id='message'></span>
-            </div>
-            @Html.HiddenFor(m => m.UserId)
-        </fieldset>
+  <div class="dnnForm dnnEditBasicSettings" id="dnnEditBasicSettings">
+    <div class="dnnFormExpandContent dnnRight "><a href="#">@Dnn.LocalizeString("ExpandAll")</a></div>
+    <h2 id="dnnSitePanel-BasicSettings" class="dnnFormSectionHead dnnClear">
+      <a href="#" class="dnnSectionExpanded">@Dnn.LocalizeString("BasicSettings")</a>
+    </h2>
+    <fieldset>
+      <div class="formItem col-6">
+        <div><label>@Lang.GetString("Password", ResourceName)</label></div>
+        @Html.TextBoxFor(m => m.Password, new
+        {
+            @class = "form-control",
+            @id = "password",
+            @type = "password",
+        onkeyup = "handlePasswordValidation();"
+        })
+        <span id="passwordValidationMessage"></span>
+      </div>
+      <div class="formItem col-6">
+        <div><label>@Lang.GetString("ConfirmPassword", ResourceName)</label></div>
+        @Html.TextBoxFor(m => m.ConfirmPassword, new
+        {
+            @id = "confirm_password",
+            @type = "password",
+            onkeyup = "validatePassword();"
+        })
+        <span id='message'></span>
+      </div>
+      @Html.HiddenFor(m => m.UserId)
+    </fieldset>
+  </div>
+  <div class="buttonForm mt20">
+    <div class="center">
+      <button type="submit" class="primary" id="saveButton">Save</button>
+      <button id="cancelEdit" href="#">@Dnn.LocalizeString("Cancel")</button>
     </div>
-    <div class="buttonForm mt20">
-        <div class="center">
-            <button type="submit" class="primary" id="saveButton">Save</button>
-            <button id="cancelEdit" href="#">@Dnn.LocalizeString("Cancel")</button>
-        </div>
-    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
-    var weak = '@DotNetNuke.Services.Localization.Localization.GetString("Weak.Text", @ResourceFile)';
-    var fair = '@DotNetNuke.Services.Localization.Localization.GetString("Fair.Text", @ResourceFile)';
-    var strong = '@DotNetNuke.Services.Localization.Localization.GetString("Strong.Text", @ResourceFile)';
-    var passwordMatch = '@DotNetNuke.Services.Localization.Localization.GetString("PasswordMatch.Text", @ResourceFile)';
-    var match = '@DotNetNuke.Services.Localization.Localization.GetString("Match.Text", @ResourceFile)';
+    var weak = '@Lang.GetString("Weak.Text", ResourceName)';
+    var fair = '@Lang.GetString("Fair.Text", ResourceName)';
+    var strong = '@Lang.GetString("Strong.Text", ResourceName)';
+    var passwordMatch = '@Lang.GetString("PasswordMatch.Text", ResourceName)';
+    var match = '@Lang.GetString("Match.Text", ResourceName)';
 
     function validatePassStrength(pass, minLength, minNumberOfSpecialChars, validationExpression) {
         var passwordElement = document.getElementById('password');
