--- a/Modules/UserManager/Views/UserManage/Index.cshtml
+++ b/Modules/UserManager/Views/UserManage/Index.cshtml
@@ -1,14 +1,13 @@
 @inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<DataTableResponse<Upendo.Modules.UserManager.Models.DnnModel.Users>>
 
-@using DotNetNuke.Entities.Users;
+@using DotNetNuke.Entities.Users
 
-@using Upendo.Modules.UserManager.ViewModels;
-@using Upendo.Modules.UserManager.Components;
-@using Upendo.Modules.UserManager.Utility;
+@using Upendo.Modules.UserManager.ViewModels
+@using Upendo.Modules.UserManager.Utility
 
-@using Lang = Upendo.Modules.UserManager.Utility.Helpers.LocalizationHelper;
-@using Icon = Upendo.Modules.UserManager.Utility.Helpers.IconHelper;
-@using Text = Upendo.Modules.UserManager.Utility.Helpers.TextHelper;
+@using Lang = Upendo.Modules.UserManager.Utility.Helpers.LocalizationHelper
+@using Icon = Upendo.Modules.UserManager.Utility.Helpers.IconHelper
+@using Text = Upendo.Modules.UserManager.Utility.Helpers.TextHelper
 
 @*
 
@@ -22,9 +21,9 @@
   bool isDebug = true;
   var loggedInUser = UserController.Instance.GetCurrentUserInfo();
 
-  // Important: see 'lang' above, default GetString() is shared, otherwise pass in the resource file name
+  // Important: see 'lang' above, default GetString() is shared, otherwise pass in the resource filename
   // TODO? consolidate user module resources in to App_LocalResources/UserManager.resx and update Constants and LocalizationHelper accordingly
-  string resourceFilename = "Index";
+  string ResourceName = "Index";
 
   double PageIndex = Model.PageIndex == 0 ? 1 : Model.PageIndex;
   var pageIndexMinus = (PageIndex - 1) <= 0 ? 0 : (Model.PageIndex - 1);
@@ -36,7 +35,7 @@
 
   // build label for OrderBy dropdown (selectSortField) based on selected value (default is Username)
   var modelOrderBy = string.IsNullOrWhiteSpace(Model.OrderBy) ? Constants.DefaultSelectSortField : Model.OrderBy.Trim();
-  var orderByLabel = string.Format("{0}: {1}", Lang.GetString("SortBy"), Lang.GetString(modelOrderBy, resourceFilename));
+  var orderByLabel = string.Format("{0}: {1}", Lang.GetString("SortBy"), Lang.GetString(modelOrderBy, ResourceName));
 
   var modelSearch = Model.Search == " " ? "" : Model.Search;
   var modelOrder = Model.Order ?? "asc"; // default to ascending order
@@ -51,10 +50,10 @@
       <summary>Module</summary>
 <pre>
 isDebug=@isDebug
-resourceFilename = @resourceFilename
+ResourceName = @ResourceName
 Upendo.Modules.UserManager.Utility.Constants.ModulePath: @Constants.ModulePath
 Dnn.ActiveModule.DesktopModule.FolderName:               @Dnn.ActiveModule.DesktopModule.FolderName
-Lang.GetString() for DeleteUnauthorized.Text:            @Lang.GetString("DeleteUnauthorized.Text", resourceFilename)
+Lang.GetString() for DeleteUnauthorized.Text:            @Lang.GetString("DeleteUnauthorized.Text", ResourceName)
 </pre>
     </details>
     <details>
@@ -186,20 +185,20 @@ else
       <div class="flex-container action-buttons" style="margin-bottom: 0.5rem;">
         <dnn-button class="left-item" onclick="@Url.Action("Create", "UserManage", new {ctl = "Edit"})">
           @Icon.Glyph("plus")
-          @Lang.GetString("BtnCreateUser", resourceFilename)
+          @Lang.GetString("BtnCreateUser", ResourceName)
         </dnn-button>
         <div class="right-group">
-          <dnn-button id="buttonDeleteUnauthorizedUsers" class="right-item" style="--background-color: orange;" confirm confirm-message="@Lang.GetString("DeleteUnauthorized.Text", resourceFilename)">
+          <dnn-button id="buttonDeleteUnauthorizedUsers" class="right-item" style="--background-color: orange;" confirm confirm-message="@Lang.GetString("DeleteUnauthorized.Text", ResourceName)">
             @Icon.Glyph("trash")
-            @Lang.GetString("DeleteUnauthorizedUsers", resourceFilename)
+            @Lang.GetString("DeleteUnauthorizedUsers", ResourceName)
           </dnn-button>
-          <dnn-button id="buttonRemoveDeletedUsers" class="right-item" style="--background-color: orange;" confirm confirm-message="@Lang.GetString("RemoveDelete.Text", resourceFilename)">
+          <dnn-button id="buttonRemoveDeletedUsers" class="right-item" style="--background-color: orange;" confirm confirm-message="@Lang.GetString("RemoveDelete.Text", ResourceName)">
             @Icon.Glyph("trash")
-            @Lang.GetString("RemoveDeleteUsers", resourceFilename)
+            @Lang.GetString("RemoveDeleteUsers", ResourceName)
           </dnn-button>
           <dnn-button class="right-item" onclick="@Url.Action("Index", "RolesManage", new {ctl = "Edit"})" type="secondary">
             @Icon.Glyph("list-alt")
-            @Lang.GetString("RolesList", resourceFilename)
+            @Lang.GetString("RolesList", ResourceName)
           </dnn-button>
         </div>
       </div>
@@ -228,9 +227,9 @@ else
             <dnn-select id="selectSortField" value="@Constants.DefaultSelectSortField"
                         style="--foreground: rgba(228, 228, 228, 0.8); --background: rgba(228, 228, 228, 0.8); --control-radius: 8px;">
               <option value="">@orderByLabel</option>
-              <option value="Username">@Lang.GetString("Username", resourceFilename) (default)</option>
-              <option value="DisplayName">@Lang.GetString("DisplayName", resourceFilename)</option>
-              <option value="Email">@Lang.GetString("Email", resourceFilename)</option>
+              <option value="Username">@Lang.GetString("Username", ResourceName) (default)</option>
+              <option value="DisplayName">@Lang.GetString("DisplayName", ResourceName)</option>
+              <option value="Email">@Lang.GetString("Email", ResourceName)</option>
             </dnn-select>
           </div>
           <div class="left-item" style="padding: 0.75rem 0; margin-left: -1.25rem;">
@@ -255,23 +254,23 @@ else
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr style="background-color:#6d5a2c; color:#FFFFFF">
-            <th class="hidden">@Lang.GetString("Id", resourceFilename)</th>
+            <th class="hidden">@Lang.GetString("Id", ResourceName)</th>
             <th class="uppercase-text">
-              <span>@Lang.GetString("Username", resourceFilename)</span>
+              <span>@Lang.GetString("Username", ResourceName)</span>
               @GetOptionalSortIcon("Username", modelOrderBy, modelOrder)
             </th>
             <th class="uppercase-text">
-              <span>@Lang.GetString("DisplayName", resourceFilename)</span>
+              <span>@Lang.GetString("DisplayName", ResourceName)</span>
               @GetOptionalSortIcon("DisplayName", modelOrderBy, modelOrder)
             </th>
             <th class="uppercase-text">
-              <span>@Lang.GetString("Email", resourceFilename)</span>
+              <span>@Lang.GetString("Email", ResourceName)</span>
               @GetOptionalSortIcon("Email", modelOrderBy, modelOrder)
             </th>
             <th class="uppercase-text text-center" 
               title="Show deleted and other statuses" 
-            >@Lang.GetString("UserStatus.Text", resourceFilename)</th>
-            <th class="text-center">@Lang.GetString("Actions", resourceFilename)</th>
+            >@Lang.GetString("UserStatus.Text", ResourceName)</th>
+            <th class="text-center">@Lang.GetString("Actions", ResourceName)</th>
           </tr>
         </thead>
         <tbody>
@@ -280,8 +279,8 @@ else
             <tr>
               <td colspan="6">
                 <div class="center">
-                  <h1>@Lang.GetString("NoUsersFound", resourceFilename)</h1>
-                  <h2>@Lang.GetString("SearchCriteria", resourceFilename)</h2>
+                  <h1>@Lang.GetString("NoUsersFound", ResourceName)</h1>
+                  <h2>@Lang.GetString("SearchCriteria", ResourceName)</h2>
                 </div>
               </td>
             </tr>
@@ -339,17 +338,17 @@ else
                   }
                 </td>
                 <td class="text-center">
-                  <a data-hint="Edit" class="btn btn-warning btn-sm edit warning" href="@Url.Action("Edit", "UserManage", new {ctl = "Edit", itemId = item.UserId})"
+                  <a data-hint="Edit" class="btn btn-warning btn-sm" href="@Url.Action("Edit", "UserManage", new {ctl = "Edit", itemId = item.UserId})"
                      data-toggle="tooltip" data-placement="top" title="@Lang.GetString("Edit")">
-                    <span class="glyphicon glyphicon-edit color-white" aria-hidden="true"></span>
+                    @Icon.Google("edit", styleColor: "white", styleMargin: "0px")
                   </a>
-                  <a data-hint="User Roles" class="btn btn-info btn-sm edit " href="@Url.Action("UserRoles", "UserManage", new {itemId = item.UserId})"
-                     data-toggle="tooltip" data-placement="top" title="@Lang.GetString("UserRoles", resourceFilename)">
-                    <span class="glyphicon glyphicon-tasks color-white" aria-hidden="true"></span>
+                  <a data-hint="User Roles" class="btn btn-info btn-sm" href="@Url.Action("UserRoles", "UserManage", new {itemId = item.UserId})"
+                     data-toggle="tooltip" data-placement="top" title="@Lang.GetString("UserRoles", ResourceName)">
+                    @Icon.Google("checklist", styleColor: "white", styleMargin: "0px")
                   </a>
                   <span id="dialogs-delete" class="dnnActions" style="display: initial;">
                     <a data-hint="Delete" class="confirm btn btn-danger btn-sm delete error" data-placement="top" data-singleton="true" href="@Url.Action("Delete", "UserManage", new {itemId = item.UserId})">
-                      <span class="glyphicon glyphicon-trash color-white" aria-hidden="true"></span>
+                      @Icon.Google("delete", styleColor: "white", styleMargin: "0px")
                     </a>
                   </span>
                 </td>
@@ -386,9 +385,9 @@ else
     </div>
 
     <script>
-    var deleteText = '@Lang.GetString("DeleteConfirmation.Text", resourceFilename)';
-    var deleteUnauthorizedText = '@Lang.GetString("DeleteUnauthorized.Text", resourceFilename)';
-    var removeDeleteText = '@Lang.GetString("RemoveDelete.Text", resourceFilename)';
+    var deleteText = '@Lang.GetString("DeleteConfirmation.Text", ResourceName)';
+    var deleteUnauthorizedText = '@Lang.GetString("DeleteUnauthorized.Text", ResourceName)';
+    var removeDeleteText = '@Lang.GetString("RemoveDelete.Text", ResourceName)';
 $(function () {
     $('.dropdown-toggle').dropdown();
 });
